# urban_sound

./: .dockerignore  .gitignore  README.md  bird_data_download.sh  look_ahead_experiment.sh  pyproject.toml  setup.cfg
docker/: Dockerfile
figures/2021-08-30/14-52-36/runs/Aug30_14-52-46_13da76478412/: events.out.tfevents.1630335166.13da76478412.1.0
figures/2021-08-30/14-55-08/runs/Aug30_15-02-48_96bc35fecf97/: events.out.tfevents.1630335768.96bc35fecf97.1.0
figures/2021-08-30/15-50-52/runs/Aug30_15-51-02_07d6a02c75c1/: events.out.tfevents.1630338662.07d6a02c75c1.1.0
figures/elephants/: system_architecture.ipe
figures/umap_tests/: multirun.yaml
figures/umap_tests/10-47-41/: multirun.yaml
figures/umap_tests/11-06-05/: multirun.yaml
src/urban_sound/: detector.py  evaluate.py  main.py  preprocess_spectra.py  profile_app.py  train.py
src/urban_sound/config/: config.yaml  debug.yaml  detect.yaml
src/urban_sound/config/dataset/: birds.yaml  clusters.yaml  continuous_image_elephant.yaml  numbers.yaml  rumble_only_elephant.yaml  urban_sound.yaml
src/urban_sound/config/dim_reduction/: tsne.yaml  umap.yaml
src/urban_sound/dataloader/: load_data.py
src/urban_sound/datasets/: __init__.py  kenya_data_getter.py  line_sweep.py  load_data.py
src/urban_sound/logging/: log.py
src/urban_sound/model/: cpc.py  detect.py  eval.py
tests/unit/: test_train.py
tests/unit/dataloader/: test_load_data.py
tests/unit/datasets/: test_line_sweep.py  test_load_data.py
tests/unit/model/: test_cpc.py
tests/unit/resources/Urban8K/metadata/: UrbanSound8K.csv
(+37 files in other folders)
