[metadata]
name=urban-sound
version=0.0.1
author=Ben Ellis
author_email=benellis@robots.ox.ac.uk
description=A small package to read the UrbanSound8k dataset.
url=https://github.com/benellis3/urban_sound

[options]
package-dir=
    = src
python_requires= >=3.8
install_requires=
    torch==1.8.1
    torchaudio==0.8.1
    torchvision==0.9.1
    scikit-image
    umap-learn
    numpy <1.21,>=1.17
    pandas
    hydra-core
    omegaconf
    torchtyping
    typeguard
    tqdm
    tensorboard
    scikit-learn
    seaborn
    matplotlib
test_requires=
    pytest
    pytest-rng
packages=find:

[options.packages.find]
where=src